Added. user auth and session management backend